# aionostr

./: .cirrus.yml  .gitignore  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
aionostr/: __init__.py  key.py  relay.py
contrib/: release.sh
contrib/sdist/: build.sh  make_sdist.sh
docs/: usage.rst
src/electrum_aionostr/: __init__.py  benchmark.py  cli.py  event.py  key.py  relay.py  util.py
tests/: test_aionostr.py  test_event.py  test_key.py
