[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electrum-aionostr"
authors = [
    { name = "The Electrum developers" },
]
description = "asyncio nostr client"
keywords = ["nostr", "asyncio"]
readme = "README.md"
license = {'file'="LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "electrum_ecc",
    "aiohttp>=3.11.0,<4.0.0",
    "aiohttp_socks>=0.8.4",
    "cryptography>=2.8",
    "aiorpcx>=0.22.0,<0.25",  # for taskgroup. remove when we use python 3.11
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ['version']

[project.optional-dependencies]
tests = [
    "pytest-cov",
    "Click",
]
cli = [
    "Click",
]

[project.urls]
Homepage = "https://github.com/spesmilo/electrum-aionostr"
Repository = "https://github.com/spesmilo/electrum-aionostr"

[project.scripts]
aionostr = "electrum_aionostr.cli:main"

[tool.setuptools.dynamic]
version = { attr = 'electrum_aionostr.__version__' }
